compiler/tools/fpp-check/test/connection_pattern/event_missing_source_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/event_missing_source_port.fpp: 18.32
    event connections instance events { c }
                               ^
error: instance events has no event input port
